<resources>
    <string name="app_name">Exercise_Tracker</string>
    <string name="extrack">EXTRACK</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="sign_in">SIgn In</string>
    <string name="don_t_have_an_account_signup_now">Don\'t have an account? SignUp now</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="age">Age (Y)</string>
    <string name="weight">Weight (KG)</string>
    <string name="height">Height (M)</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="download_nutrition_file">Download Nutrition File</string>
    <string name="escriba_el_mensaje_y_luego_clickee_el_canal_a_ser_enviado">Escriba el mensaje y luego clickee el canal a ser enviado</string>
    <string name="walking">WALKING</string>
    <string name="time_elapsed">Time Elapsed</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="jogging">JOGGING</string>
    <string name="cycling">CYCLING</string>
    <string name="go_back">Go Back</string>
</resources>